pip install issue

--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,8 @@ machine:
 
 test:
   override:
-    - pip install https://github.com/nabla-c0d3/sslyze/archive/0.13.4.tar.gz
+    - id
+    - sudo pip install https://github.com/nabla-c0d3/sslyze/archive/0.13.4.tar.gz
     - docker info
     - bundle exec rake
 
